RESOLVED FIXED33013
[GTK] fails fast/harness/use-page-cache.html
https://bugs.webkit.org/show_bug.cgi?id=33013
Summary [GTK] fails fast/harness/use-page-cache.html
Gustavo Noronha (kov)
Reported 2009-12-29 04:38:50 PST
This happens because we are not forwarding the settings to the child webView.
Attachments
Make sure settings are forwarded to child WebViews. (1.19 KB, patch)
2009-12-29 04:40 PST, Gustavo Noronha (kov)
no flags
Gustavo Noronha (kov)
Comment 1 2009-12-29 04:40:40 PST
Created attachment 45592 [details] Make sure settings are forwarded to child WebViews.
WebKit Review Bot
Comment 2 2009-12-29 04:42:16 PST
Attachment 45592 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKitTools/DumpRenderTree/gtk/DumpRenderTree.cpp:787: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1
Gustavo Noronha (kov)
Comment 3 2009-12-29 04:59:35 PST
Landed as r52614, reviewed on IRC by Holger.
Note You need to log in before you can comment on or make changes to this bug.