Reviewed by Holger Freyther.

[GTK] fails fast/harness/use-page-cache.html
https://bugs.webkit.org/show_bug.cgi?id=33013

Make sure settings are forwarded to child WebViews.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(createWebView):

Canonical link: https://commits.webkit.org/44027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52614 268f45cc-cd09-0410-ab3c-d52691b4dbfc